#30 source param added to API. Swagger docs updated to include this.
